--- a/index.html
+++ b/index.html
@@ -5,11 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="navbar.css">
     <title>Document</title>
 </head>
 
 <body>
-    <h1>hello </h1>
+    <nav>
+        <div class="sale-nav">
+            <div class="sale-contant">
+                <div class="sale-info">
+                    <h2> <span> Sale ends today|</span> Expand your potential through learning. Courses start at just
+                        ₹525.</h2>
+                    <h1>Ends in 13h 23m 33s.</h1>
+                </div>
+                <div class="remove-sale">
+                    <img width="20px" src="assets/cross.png" alt="" srcset="">
+                </div>
+            </div>
+        </div>
+    </nav>
 </body>
 
 </html>
