--- a/product.html
+++ b/product.html
@@ -12,16 +12,19 @@
     <meta name="title" content="Online Courses - Learn Anything, On Your Schedule | Udemy">
     <link rel="stylesheet" href="style/global.css">
     <link rel="stylesheet" href="style/navbar.css">
+    <link rel="stylesheet" href="style/product.css">
 
     <title>Online Courses - Learn Anything, On Your Schedule | Udemy</title>
 </head>
 
 <body>
     <nav>
-
     </nav>
-    <section></section>
-
+    <div class="name-div">
+        <h1 class="course-name">JavaScript Courses</h1>
+        <p class="course-title">JavaScript relates to <a> DevelopmentIT & Software</a></p>
+        <span class="learners">12,197,710 learners</span>
+    </div>
 </body>
 
 </html>
@@ -29,16 +32,12 @@
 <script type="module">
     import navbar from "./components/navbar.js"
     import timer from "./scripts/timer.js"
+
     document.querySelector("nav").innerHTML = navbar()
-    //////////////////////////////////////////////timer
-       timer(document.querySelector(".timer"))
+    timer(document.querySelector(".timer"))
     document.querySelector(".remove-sale").addEventListener("click", () => {
         document.querySelector(".sale-nav").style.display = "none"
     })
-
-
-    ////////
-    // change mode
     document.querySelector(".mods").addEventListener("click", () => {
         document.querySelector(".mods").classList.toggle("light-mode")
         changeTheme()
@@ -54,11 +53,8 @@
 
         }
     }
-    /////////////
-    
-
-////////
-
 </script>
-<script type="module"  src="scripts/search.js"></script>
-<script type="module"  src="scripts/cat-menu.js"></script>
+
+<script type="module" src="scripts/search.js"></script>
+<script type="module" src="scripts/cat-menu.js"></script>
+<script type="module" src="scripts/product.js"></script>
