--- a/product.html
+++ b/product.html
@@ -32,11 +32,136 @@
             </div>
         </div>
         <button class="next-slide" id="slide1">
-            <img src="assets/next.png" alt="" srcset="">
+            <img class="icon" src="assets/next.png" alt="" srcset="">
         </button>
         <button class="prev-slide" id="slideP1">
-            <img src="assets/next.png" alt="" srcset="">
+            <img class="icon" src="assets/next.png" alt="" srcset="">
         </button>
+    </div>
+
+    <div class="prod-head">
+        <h2>All Development courses</h2>
+        <div class="not-sure">
+            <button>i</button>
+            <p>information alert Not sure? All courses have a 30-day money-back guarantee</p>
+        </div>
+    </div>
+    <div class="sort-head">
+        <div class="sort-box">
+            <div class="filter-toggle">
+                <img class="icon" src="assets/filter.png" alt="" srcset="">
+                Filter
+            </div>
+            <div class="sort">
+                <p class="sort-by">Sort by</p>
+                <select value="">
+                    <option value="most">Most Popular</option>
+                    <option value="high">Highest Rated</option>
+                    <option value="new">Newest</option>
+                </select>
+            </div>
+        </div>
+        <div class="resuts">
+            <h4>10,000 results</h5>
+        </div>
+    </div>
+    <div class="main-products">
+        <div class="left-filters">
+            <div class="video-duration fils">
+                <div class="fil-title">
+                    <h2>video Duration</h2>
+                    <img class="icon" src="assets/next.png" alt="" srcset="">
+                </div>
+                <div class="fil-data">
+                    <p>
+                        <input type="checkbox" onclick="fil()" name="" value="dur#0-1hour">
+                        0-1 hour (544)
+                    </p>
+                    <p>
+                        <input type="checkbox" onclick="fil()" name="" value="dur#1-3hour">
+                        1-3 hour (2,237)
+                    </p>
+                    <p>
+                        <input type="checkbox" onclick="fil()" name="" value="dur#3-6hour">
+                        3-6 hour (2,102)
+                    </p>
+                    <p>
+                        <input type="checkbox" onclick="fil()" name="" value="dur#6-17hour">
+                        6-17 (3,116)
+                    </p>
+                </div>
+            </div>
+            <!-- ///////////// -->
+            <div class="topics">
+                <div class="fil-title">
+                    <h2>Topic</h2>
+                    <img class="icon" src="assets/next.png" alt="" srcset="">
+                </div>
+                <div class="fil-data"></div>
+            </div>
+            <!-- //////////////// -->
+            <div class="sub-cat">
+                <div class="fil-title">
+                    <h2>Subcategory</h2>
+                    <img class="icon" src="assets/next.png" alt="" srcset="">
+                </div>
+                <div class="fil-data"></div>
+            </div>
+
+            <div class="level">
+                <div class="fil-title">
+                    <h2>Level</h2>
+                    <img class="icon" src="assets/next.png" alt="" srcset="">
+                </div>
+                <div class="fil-data">
+                    <p>
+                        <input type="checkbox" onclick="fil()" name="" value="level#all-levels">
+                        All Levels
+                    </p>
+                    <p>
+                        <input type="checkbox" onclick="fil()" name="" value="level#beginner">
+                        Beginner
+                    </p>
+                    <p>
+                        <input type="checkbox" onclick="fil()" name="" value="level#intermediate">
+                        Intermediate
+                    </p>
+                    <p>
+                        <input type="checkbox" onclick="fil()" name="" value="level#expert">
+                        Expert
+                    </p>
+                </div>
+            </div>
+            <div class="price">
+                <div class="fil-title">
+                    <h2>Price</h2>
+                    <img class="icon" src="assets/next.png" alt="" srcset="">
+                </div>
+                <div class="fil-data">
+                    <p>
+                        <input type="checkbox" onclick="fil()" name="" value="price#paid">
+                        Paid (8,358)
+                    </p>
+                    <p>
+                        <input type="checkbox" onclick="fil()" name="" value="price#free">
+                        Free (1,247)
+                    </p>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+    <!-- ///////////////////////////////////////////////////// -->
+
+    <div class="right-products">
+
+    </div>
     </div>
 </body>
 
