--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
         }
     }
     /////////////
+    // navbar end
 
     let d = JSON.parse(localStorage.getItem("pData"))
     cousreList(d, document.querySelector(".slide"))
