--- a/product.html
+++ b/product.html
@@ -67,83 +67,59 @@
     </div>
     <div class="main-products">
         <div class="left-filters">
-            <div class="video-duration fils">
-                <div class="fil-title">
-                    <h2>video Duration</h2>
-                    <img class="icon" src="assets/next.png" alt="" srcset="">
-                </div>
-                <div class="fil-data">
-                    <p>
-                        <input type="checkbox" onclick="fil()" name="" value="dur#0-1hour">
-                        0-1 hour (544)
-                    </p>
-                    <p>
-                        <input type="checkbox" onclick="fil()" name="" value="dur#1-3hour">
-                        1-3 hour (2,237)
-                    </p>
-                    <p>
-                        <input type="checkbox" onclick="fil()" name="" value="dur#3-6hour">
-                        3-6 hour (2,102)
-                    </p>
-                    <p>
-                        <input type="checkbox" onclick="fil()" name="" value="dur#6-17hour">
-                        6-17 (3,116)
-                    </p>
-                </div>
-            </div>
             <!-- ///////////// -->
             <div class="topics">
-                <div class="fil-title">
+                <div style="border-top: 1px solid var(--faded-color);" class="fil-title fil-active">
                     <h2>Topic</h2>
-                    <img class="icon" src="assets/next.png" alt="" srcset="">
+                    <img class="icon" src="assets/up.png" alt="" srcset="">
                 </div>
-                <div class="fil-data"></div>
+                <div class="fil-data topic-cat-fil"></div>
             </div>
             <!-- //////////////// -->
             <div class="sub-cat">
-                <div class="fil-title">
+                <div class="fil-title fil-active">
                     <h2>Subcategory</h2>
-                    <img class="icon" src="assets/next.png" alt="" srcset="">
+                    <img class="icon" src="assets/up.png" alt="" srcset="">
                 </div>
-                <div class="fil-data"></div>
+                <div class="fil-data sub-cat-fil"></div>
             </div>
 
             <div class="level">
-                <div class="fil-title">
+                <div class="fil-title fil-active">
                     <h2>Level</h2>
-                    <img class="icon" src="assets/next.png" alt="" srcset="">
+                    <img class="icon" src="assets/up.png" alt="" srcset="">
                 </div>
                 <div class="fil-data">
-                    <p>
-                        <input type="checkbox" onclick="fil()" name="" value="level#all-levels">
+                    <p class="fil-p">
+                        <input type="checkbox" value="all-levels,level">
                         All Levels
                     </p>
-                    <p>
-                        <input type="checkbox" onclick="fil()" name="" value="level#beginner">
+                    <p class="fil-p">
+                        <input type="checkbox" value="beginner,level">
                         Beginner
                     </p>
-                    <p>
-                        <input type="checkbox" onclick="fil()" name="" value="level#intermediate">
+                    <p class="fil-p">
+                        <input type="checkbox" value="intermediate,level">
                         Intermediate
                     </p>
-                    <p>
-                        <input type="checkbox" onclick="fil()" name="" value="level#expert">
+                    <p class="fil-p">
+                        <input type="checkbox" value="expert,level">
                         Expert
                     </p>
                 </div>
             </div>
             <div class="price">
-                <div class="fil-title">
+                <div class="fil-title fil-active">
                     <h2>Price</h2>
-                    <img class="icon" src="assets/next.png" alt="" srcset="">
+                    <img class="icon" src="assets/up.png" alt="" srcset="">
                 </div>
                 <div class="fil-data">
-                    <p>
-                        <input type="checkbox" onclick="fil()" name="" value="price#paid">
+                    <p class="fil-p">
+                        <input type="checkbox" value="paid,price">
                         Paid (8,358)
                     </p>
-                    <p>
-                        <input type="checkbox" onclick="fil()" name="" value="price#free">
+                    <p class="fil-p">
+                        <input type="checkbox" value="free,price">
                         Free (1,247)
                     </p>
                 </div>
@@ -157,12 +133,18 @@
 
 
 
-    <!-- ///////////////////////////////////////////////////// -->
+        <!-- ///////////////////////////////////////////////////// -->
 
-    <div class="right-products">
+        <div class="right-products">
 
+        </div>
     </div>
-    </div>
+
+
+
+    <footer style=" margin-top:100px; position:relative; background-color: black; color:white !important;">
+
+    </footer>
 </body>
 
 </html>
@@ -171,8 +153,10 @@
     import navbar from "./components/navbar.js"
     import timer from "./scripts/timer.js"
     import cousreList from "./components/courseList.js"
+    import footer from "./components/footer.js"
 
     document.querySelector("nav").innerHTML = navbar()
+    document.querySelector("footer").innerHTML = footer()
     timer(document.querySelector(".timer"))
     document.querySelector(".remove-sale").addEventListener("click", () => {
         document.querySelector(".sale-nav").style.display = "none"
@@ -204,9 +188,39 @@
         document.querySelector("#slideP1").style.display = "none"
         document.querySelector("#slide1").style.display = "flex"
     }
+    let t = document.querySelectorAll(".fil-title")
+    for (let i = 0; i < t.length; i++) {
+        t[i].addEventListener("click", () => {
+            t[i].classList.toggle("fil-active")
+        })
+    }
 
+</script>
+<script>
+    function fil(val, cat) {
+        let filter = { val: val, cat: cat }
+        localStorage.setItem("filter", JSON.stringify(filter))
+    }
+    let p = document.querySelectorAll(".fil-data>p");
+    for (let i = 0; i < p.length; i++) {
+        p[i].addEventListener("click", () => {
+            p[i].childNodes[1].setAttribute("checked", "true");
+            p[i].classList.toggle("p-ac-cat");
+            checkP(p[i]);
+        });
+    }
+    function checkP(p) {
+        if (!p.classList.contains("p-ac-cat")) {
+            p.childNodes[1].removeAttribute("checked");
+        }
+        8146666686
+    }
+    document.querySelector(".filter-toggle").addEventListener("click", () => {
+        document.querySelector(".left-filters").classList.toggle("filters-disabled")
+    })
 </script>
 
 <script type="module" src="scripts/search.js"></script>
 <script type="module" src="scripts/cat-menu.js"></script>
 <script type="module" src="scripts/product.js"></script>
+<script type="module" src="scripts/fil-cat.js"></script>
