--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 
     <div id="z1">What to learn next</div>
-    <div id="z2">Popular for advancing Full Stack Web Developers <span
+    <div class="course-title" id="z2">Popular for advancing Full Stack Web Developers <span
             style="color:#5624d0; font-size: .97rem; text-decoration: underline; margin-left: 1.2rem;">Edit
             profession</span></div>
 
@@ -105,6 +105,9 @@
 
     <!-- 1 container  -->
 
+
+    <!-- 1 container  -->
+
     <div class="con1">
         <div class="course-list">
             <div>
@@ -119,6 +122,309 @@
             </button>
         </div>
     </div>
+
+
+
+
+
+
+
+
+
+    <!-- 2nd  -->
+
+    <div class="course-title" id="z2">Because you viewed "<span style="color:#5624d0; font-size: .97rem; text-decoration: none;font-size: 1.5rem;
+        font-weight: bold;">The Complete 2022 Web Development Bootcamp</span>"</div>
+
+
+
+    <div class="con1">
+        <div class="course-list">
+            <div>
+                <div class="slide" id="slide_1">
+                </div>
+            </div>
+            <button class="next-slide" id="slide1_11">
+                <img src="assets/next.png" alt="" srcset="">
+            </button>
+            <button class="prev-slide" id="slideP1_1">
+                <img src="assets/next.png" alt="" srcset="">
+            </button>
+        </div>
+    </div>
+
+
+
+
+
+
+
+    <div class="course-title" id="z2">Topics recommended for you <span
+            style="color:#5624d0; font-size: .97rem; text-decoration: none; margin-left: 1.2rem;"></span></div>
+    <div id="recom">
+        <div class="recom1">React</div>
+        <div class="recom1">React Hooks</div>
+        <div class="recom1">Redux Framework</div>
+        <div class="recom1">React Native</div>
+        <div class="recom1">MERN Stack</div>
+        <div class="recom1">Web Development</div>
+        <div class="recom1">JavaScript</div>
+        <div class="recom1">Node.Js</div>
+        <div class="recom1">MongoDB</div>
+        <div class="recom1">Front End Web Development</div>
+    </div>
+
+
+
+    <!-- 3rd  -->
+
+    <div class="course-title" id="z2">What people who learn <span style="color:#5624d0; font-size: .97rem; text-decoration: none;font-size: 1.5rem;
+    font-weight: bold;">React</span> take next</div>
+
+
+
+    <div class="con1">
+        <div class="course-list">
+            <div>
+                <div class="slide" id="slide_2">
+                </div>
+            </div>
+            <button class="next-slide" id="slide1_21">
+                <img src="assets/next.png" alt="" srcset="">
+            </button>
+            <button class="prev-slide" id="slideP1_2">
+                <img src="assets/next.png" alt="" srcset="">
+            </button>
+        </div>
+    </div>
+
+
+
+
+
+
+    <!-- 4th  -->
+    <div class="course-title" id="z2">Featured courses in <span style="color:#5624d0; font-size: .97rem; text-decoration: none; font-size: 1.5rem;
+    font-weight: bold;">React</span></div>
+
+
+
+    <div class="con1">
+        <div class="course-list">
+            <div>
+                <div class="slide" id="slide_3">
+                </div>
+            </div>
+            <button class="next-slide" id="slide1_31">
+                <img src="assets/next.png" alt="" srcset="">
+            </button>
+            <button class="prev-slide" id="slideP1_3">
+                <img src="assets/next.png" alt="" srcset="">
+            </button>
+        </div>
+    </div>
+
+
+
+    <!-- 5th  -->
+    <div class="course-title" id="z2">Featured courses in <span style="color:#5624d0; font-size: .97rem; text-decoration: none;font-size: 1.5rem;
+    font-weight: bold; ">Web Development </span></div>
+
+
+
+    <div class="con1">
+        <div class="course-list">
+            <div>
+                <div class="slide" id="slide_4">
+                </div>
+            </div>
+            <button class="next-slide" id="slide1_41">
+                <img src="assets/next.png" alt="" srcset="">
+            </button>
+            <button class="prev-slide" id="slideP1_4">
+                <img src="assets/next.png" alt="" srcset="">
+            </button>
+        </div>
+    </div>
+
+
+
+
+
+
+
+    <!-- 6th  -->
+    <div class="course-title" id="z2">Top courses in IT & Software<span
+            style="color:#5624d0; font-size: .97rem; text-decoration: none; margin-left: 1.2rem;"></span></div>
+
+
+
+    <div class="con1">
+        <div class="course-list">
+            <div>
+                <div class="slide" id="slide_5">
+                </div>
+            </div>
+            <button class="next-slide" id="slide1_51">
+                <img src="assets/next.png" alt="" srcset="">
+            </button>
+            <button class="prev-slide" id="slideP1_5">
+                <img src="assets/next.png" alt="" srcset="">
+            </button>
+        </div>
+    </div>
+
+
+
+
+
+    <!-- 7th  -->
+    <div class="course-title" id="z2">Short and sweet courses for you<span
+            style="color:#5624d0; font-size: .97rem; text-decoration: none; margin-left: 1.2rem;"></span></div>
+
+
+
+    <div class="con1">
+        <div class="course-list">
+            <div>
+                <div class="slide" id="slide_6">
+                </div>
+            </div>
+            <button class="next-slide" id="slide1_61">
+                <img src="assets/next.png" alt="" srcset="">
+            </button>
+            <button class="prev-slide" id="slideP1_6">
+                <img src="assets/next.png" alt="" srcset="">
+            </button>
+        </div>
+    </div>
+
+
+
+
+
+
+    <!-- 8th  -->
+    <div class="course-title" id="z2">Top courses in Personal Development<span
+            style="color:#5624d0; font-size: .97rem; text-decoration: none; margin-left: 1.2rem;"></span></div>
+
+
+
+    <div class="con1">
+        <div class="course-list">
+            <div>
+                <div class="slide" id="slide_7">
+                </div>
+            </div>
+            <button class="next-slide" id="slide1_71">
+                <img src="assets/next.png" alt="" srcset="">
+            </button>
+            <button class="prev-slide" id="slideP1_7">
+                <img src="assets/next.png" alt="" srcset="">
+            </button>
+        </div>
+    </div>
+
+
+
+
+
+    <!-- 9th  -->
+    <div class="course-title" id="z2">Top courses in Development<span
+            style="color:#5624d0; font-size: .97rem; text-decoration: none; margin-left: 1.2rem;"></span></div>
+
+
+
+    <div class="con1">
+        <div class="course-list">
+            <div>
+                <div class="slide" id="slide_8">
+                </div>
+            </div>
+            <button class="next-slide" id="slide1_81">
+                <img src="assets/next.png" alt="" srcset="">
+            </button>
+            <button class="prev-slide" id="slideP1_8">
+                <img src="assets/next.png" alt="" srcset="">
+            </button>
+        </div>
+    </div>
+
+
+
+
+
+
+    <!-- 10th  -->
+    <div class="course-title" id="z2">Top courses in Business<span
+            style="color:#5624d0; font-size: .97rem; text-decoration: none; margin-left: 1.2rem;"></span></div>
+
+
+
+    <div class="con1">
+        <div class="course-list">
+            <div>
+                <div class="slide" id="slide_9">
+                </div>
+            </div>
+            <button class="next-slide" id="slide1_91">
+                <img src="assets/next.png" alt="" srcset="">
+            </button>
+            <button class="prev-slide" id="slideP1_9">
+                <img src="assets/next.png" alt="" srcset="">
+            </button>
+        </div>
+    </div>
+
+
+
+
+    <!-- 11th  -->
+    <div class="course-title" id="z2">Students are viewing<span
+            style="color:#5624d0; font-size: .97rem; text-decoration: none; margin-left: 1.2rem;"></span></div>
+
+
+
+    <div class="con1">
+        <div class="course-list">
+            <div>
+                <div class="slide" id="slide_10">
+                </div>
+            </div>
+            <button class="next-slide" id="slide1_101">
+                <img src="assets/next.png" alt="" srcset="">
+            </button>
+            <button class="prev-slide" id="slideP1_10">
+                <img src="assets/next.png" alt="" srcset="">
+            </button>
+        </div>
+    </div>
+
+
+
+
+
+    <!-- 12th  -->
+    <div class="course-title" id="z2">Top courses in Design<span
+            style="color:#5624d0; font-size: .97rem; text-decoration: none; margin-left: 1.2rem;"></span></div>
+
+
+
+    <div class="con1">
+        <div class="course-list">
+            <div>
+                <div class="slide" id="slide_11">
+                </div>
+            </div>
+            <button class="next-slide" id="slide1_111">
+                <img src="assets/next.png" alt="" srcset="">
+            </button>
+            <button class="prev-slide" id="slideP1_11">
+                <img src="assets/next.png" alt="" srcset="">
+            </button>
+        </div>
+    </div>
+
 
 
     <footer style=" margin-top:100px; position:relative; background-color: black; color:white !important;">
@@ -144,39 +450,44 @@
 
     ////////
     // change mode
+    if (JSON.parse(localStorage.getItem("theme")) == "dark") {
+        document.querySelector("body").classList.add("dark-theme")
+        document.querySelector("#logo-img").src = "https://www.udemy.com/staticx/udemy/images/v7/logo-udemy-inverted.svg"
+    } else {
+        document.querySelector("#logo-img").src = "https://www.udemy.com/staticx/udemy/images/v7/logo-udemy.svg"
+        document.querySelector("body").classList.remove("dark-theme")
+    }
     document.querySelector(".mods").addEventListener("click", () => {
         document.querySelector(".mods").classList.toggle("light-mode")
         changeTheme()
     })
     function changeTheme() {
-        let mode = document.querySelector(".mods")
-        if (mode.classList.contains("light-mode")) {
-            document.querySelector("body").classList.add("dark-theme")
-            document.querySelector("#logo-img").src = "https://www.udemy.com/staticx/udemy/images/v7/logo-udemy-inverted.svg"
-        } else {
+        let mode = JSON.parse(localStorage.getItem("theme"))
+        if (mode == "dark") {
             document.querySelector("#logo-img").src = "https://www.udemy.com/staticx/udemy/images/v7/logo-udemy.svg"
             document.querySelector("body").classList.remove("dark-theme")
+            localStorage.setItem("theme", JSON.stringify("light"))
+        } else {
+            document.querySelector("body").classList.add("dark-theme")
+            document.querySelector("#logo-img").src = "https://www.udemy.com/staticx/udemy/images/v7/logo-udemy-inverted.svg"
+
+            localStorage.setItem("theme", JSON.stringify("dark"))
 
         }
     }
     /////////////
     // navbar end
+    let login = JSON.parse(localStorage.getItem("log"))
+    if (login.log == true) {
+        document.querySelector(".sign-log").classList.add("loged")
+        document.querySelector(".user").textContent = login.user[0]
+    }
 
-    let d = JSON.parse(localStorage.getItem("pData"))
-    cousreList(d, document.querySelector(".slide"))
-    document.querySelector("#slide1").onclick = () => {
-        document.querySelector(".slide").style.marginLeft = "-1292px"
-        document.querySelector("#slideP1").style.display = "flex"
-        document.querySelector("#slide1").style.display = "none"
-    }
-    document.querySelector("#slideP1").onclick = () => {
-        document.querySelector(".slide").style.marginLeft = "0"
-        document.querySelector("#slideP1").style.display = "none"
-        document.querySelector("#slide1").style.display = "flex"
-    }
+
 ////////
 
 </script>
+<script type="module" src="scripts/mapSlide.js"></script>
 <script type="module" src="scripts/search.js"></script>
 <script type="module" src="scripts/cat-menu.js"></script>
 <script type="module" src="scripts/slide.js"></script>
